[package]
name = "zeno-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Seneca Devs <https://github.com/serv-official>"]
homepage = "https://seneca.tech/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/serv-official/serv_substrate_backend/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "zeno-node"


[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
hex-literal = "0.3.4"
hex = "0.4"
futures = { version = "0.3.21", features = ["thread-pool"]}

sc-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-service = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-telemetry = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-consensus-aura = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-consensus-aura = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-inherents = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-keyring = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-rpc-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sc-basic-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-im-online = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# Local Dependencies
zeno-runtime = {  path = "../../runtime/zeno" }
node-primitives = { version = "2.0.0", default-features = false, path = "../../primitives" }

# CLI-specific dependencies
try-runtime-cli = {  optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

[features]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"zeno-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["zeno-runtime/try-runtime", "try-runtime-cli/try-runtime"]
